[project]
name = "vectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.39.0",
    "faster-whisper>=1.1.1",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-huggingface>=0.3.0",
    "langchain-milvus>=0.2.0",
    "langchain-postgres>=0.0.15",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "replicate>=1.0.7",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "transformers>=4.53.0",
    "zlib-ng>=0.5.1",
]
